updates top level quarto sites

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -4,8 +4,16 @@
 
 If you find our "BUQEYE Guide for Projection-based Emulators in nuclear physics" helpful, please cite our work:
 ```bibtex
-@article{
-    ...
+@article{Drischler:2022xyz,
+	author = {Drischler, C. and Furnstahl, R. J. and Garcia, A. J. and Melendez, J. A. and Zhang, Xilin},
+	title = "BUQEYE Guide for Projection-based Emulators in nuclear physics",
+	volume = "",
+	number = "",
+	pages = "",
+	year = "",
+	doi = "",
+	URL = "",
+	journal = "Frontiers in Physics"
 }
 ```
 :::
@@ -17,6 +25,6 @@ number OAC-2004601 (BAND Collaboration @BAND_Framework), and the NUCLEI SciDAC C
 
 
 # Acknowledgments {.unnumbered}
-We thank the Editors Maria Piarulli, Evgeny Epelbaum, and Christian Forss{\'e}n for the kind invitation to contribute to this Frontiers Research Topic @ResearchTopicUQ.
-We are also grateful to our BUQEYE @BUQEYEgithub and BAND @BAND_Framework collaboration colleagues for sharing their invaluable insights with us, and especially to Daniel Phillips for fruitful discussions in the BUQEYE state.
-C.D. thanks Petar Mlinari{\'c} for sharing his deep insights into the software library **pyMOR** @milk2016pyMOR for building MOR applications with the Python.
+We thank the Editors Maria Piarulli, Evgeny Epelbaum, and Christian Forssén for the kind invitation to contribute to this Frontiers Research Topic @ResearchTopicUQ.
+We are also grateful to our BUQEYE @BUQEYEweb and BAND @BAND_Framework collaboration colleagues for sharing their invaluable insights with us, and especially to Daniel Phillips for fruitful discussions in the BUQEYE state.
+C.D. thanks Petar Mlinarić for sharing his deep insights into the software library **pyMOR** @milk2016pyMOR for building MOR applications with the Python.
