--- a/docs/eigen-emulators.qmd
+++ b/docs/eigen-emulators.qmd
@@ -26,13 +26,13 @@ $$ {#eq-generic_eigenvalue_problem}
 subject to the normalization $\braket{\psi(\params)|\psi(\params)} = 1$, in the parameter space $\params$.
 The components of the vector $\params$ may be model parameters, such as the low-energy couplings of a nuclear EFT, or other parameters describing the system of interest [@Zhang:2021jmi;@Yapa:2022nnv].
 We consider here cases in which Equation @eq-generic_eigenvalue_problem can be solved with high fidelity, but doing so requires a significant amount of computing time, _e.g._, repeated calculations in the parameter space $\params$ for Monte Carlo sampling or optimization tasks are computationally demanding to prohibitively slow.
-In the following, we will discuss how the Ritz variational principle and the Galerkin method can be used to construct rapid and reliable^[A \emph{reliable} emulator may not necessarily be required to be highly accurate, _e.g._, if the other uncertainties of the theoretical calculation dominate the overall uncertainty budget.] emulators that facilitate these calculations.
+In the following, we will discuss how the Ritz variational principle and the Galerkin method can be used to construct rapid and reliable^[A _reliable_ emulator may not necessarily be required to be highly accurate, _e.g._, if the other uncertainties of the theoretical calculation dominate the overall uncertainty budget.] emulators that facilitate these calculations.
 
 
 ## Variational approach {#sec-eigen-emulators_variational}
 
 To construct an emulator for bound state calculations, we use here the Rayleigh--Ritz method\footnote{%
-For a critical commentary on the history of the method's name, see, _e.g._, References~\cite{LEISSA2005961,ILANKO2009731}.%
+For a critical commentary on the history of the method's name, see, _e.g._, References [@LEISSA2005961;@ILANKO2009731].%
 } and thus consider the energy functional
 $$
 \begin{equation} %\label{eq-ritz_functional}
@@ -40,7 +40,7 @@ $$
 \end{equation}
 $$ {#eq-ritz_functional}
 where the Lagrange multiplier $\subspace{E}(\params)$ (also known as Ritz value)
-imposes the normalization condition $\braket{\trial\psi | \trial\psi} = 1$ for bound states. The General Ritz Theorem [@Suzuki:1998bn]^[Many helpful theorems relevant to the Rayleigh--Ritz method can be found in Section~3 in Reference @Suzuki:1998bn.] states that the functional @eq-ritz_functional is stationary about all (discrete) solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem, not just the ground state solution, which can be seen by
+imposes the normalization condition $\braket{\trial\psi | \trial\psi} = 1$ for bound states. The General Ritz Theorem [@Suzuki:1998bn]^[Many helpful theorems relevant to the Rayleigh--Ritz method can be found in Section 3 in Reference @Suzuki:1998bn.] states that the functional @eq-ritz_functional is stationary about all (discrete) solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem, not just the ground state solution, which can be seen by
 imposing the stationary condition
 $$
 \begin{align} \label{eq-stationarity_condition}
@@ -71,7 +71,7 @@ $$
  \end{align}
 %\end{subequations}
 $$ {#eq-trial_general}
-where the column-vector $\coeffs$ contains the to-be-determined coefficients and the row-vector $X$ the (in principle) arbitrary basis states.^[Note that the term \emph{basis states} does not necessarily mean that the states are linearly independent.]
+where the column-vector $\coeffs$ contains the to-be-determined coefficients and the row-vector $X$ the (in principle) arbitrary basis states.^[Note that the term \emph{basis states} does not necessarily mean that the states are linearly independent in this context.]
 Here, we use \emph{snapshots} of high-fidelity solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem at a set of given parameter values; _i.e._, $\{\ket{\psi_i} \equiv \ket{\psi(\params_i)}\}_{i=1}^{\nbasis}$ [@Benner2017modelRedApprox;@Benner20201; @Buchan2013EigenvaluePOD;@Quarteroni:218966].
 No assumption has been made as to how to obtain the high-fidelity solutions.
 
@@ -81,15 +81,15 @@ span the subspace of the reduced-order model, as indicated by the red arrows and
 The trajectory of a high-fidelity eigenvector is denoted by the blue curve.
 The orange dot depicts an eigenvector $\ket{\psi(\params)}$ along the trajectory that,
 when projected onto the reduced space, corresponds to the turquoise point; hence, the difference between the orange and turquoise points represents the error due to the emulator's subspace projection (_i.e._, the dotted line).
-Inspired by Figure 2.1 in Ref. @Benner2017modelRedApprox.](figs/rbm.png){#fig-illustration_rbm}
+Inspired by Figure 2.1 in Reference @Benner2017modelRedApprox.](figs/rbm.png){#fig-illustration_rbm}
 
 
-@fig-illustration_rbm motivates the efficacy of snapshot-based trial functions.
+Figure @fig-illustration_rbm motivates the efficacy of snapshot-based trial functions.
 Although a given eigenvector $\ket{\psi(\params)}$ obtained from a high-fidelity solver resides in a high-dimensional (or even infinite-dimensional) space, the trajectory traced out by continuous variations in $\params$ remains in a relatively low-dimensional subspace (as illustrated by the gray plane).
 Hence, linear combinations of high-fidelity eigenvectors spanning this subspace (_i.e._, the snapshots) make extremely effective trial wave functions for variational calculations.
 In nuclear physics, snapshot-based emulators already have accurately approximated ground-state properties, such as binding energies, charge radii [@Konig:2019adq; @Ekstrom:2019lss; @Wesolowski:2021cni], and transition matrix elements [@Wesolowski:2021cni;@Yoshida:2021jbl], and have been explored for applications to excited states [@Franzke:2021ofs].
 
-Given the trial wave function @eq-trial_general}, we determine the coefficients $\coeffs_\star$ that render $\mathcal{E}[\trial \psi = X\coeffs]$ stationary under variations $\ket{\delta \trial \psi} = X\ket{\delta \coeffs}$ of the trial wave function, as opposed to arbitrary variations.
+Given the trial wave function @eq-trial_general, we determine the coefficients $\coeffs_\star$ that render $\mathcal{E}[\trial \psi = X\coeffs]$ stationary under variations $\ket{\delta \trial \psi} = X\ket{\delta \coeffs}$ of the trial wave function, as opposed to arbitrary variations.
 Solving for the optimal $\coeffs_\star$ occurs then in the low-dimensional space spanned by the basis elements in $X$ (_i.e._, the red arrows in @fig-illustration_rbm) rather than in the high-dimensional space in which $\ket{\psi}$ resides.
 From the stationarity condition @eq-stationarity_condition, we obtain the reduced-order model
 $$
@@ -114,16 +114,16 @@ $$
 \end{equation}
 $$
 
-By solving the generalized eigenvalue problem @eq-ritz_condition},^[A trimmed sampling algorithm that can substantially reduce the effects of noise in solving generalized eigenvalue problems was recently introduced in Reference @Hicks:2022ovs.]
+By solving the generalized eigenvalue problem @eq-ritz_condition,^[A trimmed sampling algorithm that can substantially reduce the effects of noise in solving generalized eigenvalue problems was recently introduced in Reference @Hicks:2022ovs.]
 one obtains $\nbasis$ pairs $\{\subspace{E}(\params),\coeffsopt(\params)\}$ consisting of a Lagrange multiplier (_i.e._, an eigenvalue) and its corresponding coefficient vector.
 Let us index the eigenvalues of the emulator equation @eq-ritz_condition and Schrödinger Equation @eq-generic_eigenvalue_problem in ascending order; that is, $\subspace{E}_n \leqslant \subspace{E}_{n+1}$ and ${E}_n \leqslant {E}_{n+1}$, respectively, with $n=1$ indicating the lowest eigenvalue.
-If the snapshot basis $X$ in the trial wave function @eq-trial_general contains $\nbasis$ linearly independent states,^[If the snapshots in $X$ are linearly dependent, which is typically the case, we can construct a $X'$ consistent of fewer but linearly independent states by orthogonalizing the snapshots up front.] then the Min--Max Theorem @Suzuki:1998bn asserts that each Lagrange multiplier,
+If the snapshot basis $X$ in the trial wave function @eq-trial_general contains $\nbasis$ linearly independent states,^[If the snapshots in $X$ are linearly dependent, we can construct a $X'$ consistent of fewer but linearly independent states by orthogonalizing the snapshots up front.] then the Min--Max Theorem @Suzuki:1998bn asserts that each Lagrange multiplier,
 $$
 \begin{equation} %\label{eq-variational_bounds}
     \subspace{E}_n(\params) \geqslant E_n(\params) \quad \text{for $1 \leqslant n \leqslant \nbasis$},
 \end{equation}
 $$ {#eq-variational_bounds}
-provides an upper bound on its corresponding eigenvalue of the Schrödinger Equation @eq-generic_eigenvalue_problem.^[For non-Hermitian Hamiltonians, one generally does not obtain the variational bounds @eq-variational_bounds] as can be observed in, _e.g._, the subspace-projected coupled-cluster method developed in Reference @Ekstrom:2019lss.]
+provides an upper bound on its corresponding eigenvalue of the Schrödinger Equation @eq-generic_eigenvalue_problem.^[For non-Hermitian Hamiltonians, one generally does not obtain the variational bounds @eq-variational_bounds] as can be observed in, _e.g._, the subspace-projected coupled-cluster method developed in Reference [@Ekstrom:2019lss].
 Furthermore, the General Ritz Theorem implies that the $\subspace{E}_n(\params)$ provide not only the variational bounds @eq-variational_bounds but also stationary approximations for these high-fidelity eigenvalues.
 Adding another basis state to $X$ can only improve these approximations, which converge to the high-fidelity eigenvalues as the projected subspace approaches the high-fidelity space @Suzuki:1998bn.
 
@@ -138,7 +138,7 @@ $$
     \braket{\psi(\params)| O(\params)|\psi(\params)} \approx \coeffsopt^\dagger(\params) \widetilde{O} \coeffsopt(\params),
 \end{align}
 $$ \{#eq-ec_expectation_emulator}
-with the subspace-projected $\widetilde{O}(\params)  = \ritzbasis^\dagger O(\params) \ritzbasis$. However, these expectation values generally do not provide variational bounds unless $O = H$ is the Hamiltonian, as discussed.
+with the subspace-projected $\widetilde{O}(\params)  = \ritzbasis^\dagger O(\params) \ritzbasis$. However, these expectation values generally do not provide variational bounds unless $O = H$ is the Hamiltonian, as discussed (see, _e.g._, Figure 5 in Reference @Konig:2019adq for emulated \isotope[4]{He} ground-state radii).
 
 
 
@@ -146,17 +146,17 @@ with the subspace-projected $\widetilde{O}(\params)  = \ritzbasis^\dagger O(\par
 
 
 The reduced-order model @eq-ritz_condition can be alternatively derived via a Galerkin projection, as we will also see with the variational emulators for scattering in Section @sec-scattering-emulators.
-To this end, we construct the __weak form__ of the Schrödinger Equation @eq-generic_eigenvalue_problem by left-multiplying it by an arbitrary test function $\bra{\testfunc}$ and asserting that
+To this end, we construct the _weak form_ of the Schrödinger Equation @eq-generic_eigenvalue_problem by left-multiplying it by an arbitrary test function $\bra{\testfunc}$ and asserting that
 $$
 \begin{align} %\label{eq-eigen_value_weak_full}
     \braket{\testfunc | H(\params) - E(\params) | \psi} = 0, \quad \forall \bra{\testfunc}.
 \end{align}
 $$ {#eq-eigen_value_weak_full}
-If the weak form @eq-eigen_value_weak_full} is satisfied for all $\bra{\testfunc}$ for a given set $\{E, \ket{\psi}\}$, then the set must also satisfy the Schrödinger Equation @eq-generic_eigenvalue_problem.
-The proof of this statement can be obtained via a contrapositive: if the Equation @eq-generic_eigenvalue_problem were not satisfied, then one could find a $\bra{\testfunc}$ such that Equation @eq-eigen_value_weak_full} is nonzero.
+If the weak form @eq-eigen_value_weak_full is satisfied for all $\bra{\testfunc}$ for a given set $\{E, \ket{\psi}\}$, then the set must also satisfy the Schrödinger Equation @eq-generic_eigenvalue_problem.
+The proof of this statement can be obtained via a contrapositive: if the Equation @eq-generic_eigenvalue_problem were not satisfied, then one could find a $\bra{\testfunc}$ such that Equation @eq-eigen_value_weak_full is nonzero.
 
 The weak form of the high-fidelity system is the starting point for deriving a reduced-order model.
-Although Equation @eq-eigen_value_weak_full still operates in the large space in which $\ket{\psi}$ resides (cf. @fig-illustration_rbm), we can reduce its dimension by replacing $\ket{\psi} \to \ket{\trial\psi}$, where $\ket{\trial\psi}$ is defined in Equation @eq-trial_general}.
+Although Equation @eq-eigen_value_weak_full still operates in the large space in which $\ket{\psi}$ resides (cf. @fig-illustration_rbm), we can reduce its dimension by replacing $\ket{\psi} \to \ket{\trial\psi}$, where $\ket{\trial\psi}$ is defined in Equation @eq-trial_general.
 With the degrees of freedom for $\ket{\psi}$ reduced, we enforce a less strict orthogonality condition: we select $\nbasis$ test functions $\testfunc_i$ and assert that the error due to the trial wave function (cf. @fig-illustration_rbm) should be orthogonal to the subspace $\mathcal{Z}$ spanned by these test functions $Z = [\ket{\testfunc_1}, \dots, \ket{\testfunc_{\nbasis}}]$:
 $$
 \begin{align}
@@ -175,7 +175,7 @@ Hence, we also had to apply the approximation $\subspace{E}\approx E$ in Equatio
 In the Galerkin method, which is also known as the "method of weighted residuals," the test and trial function bases are chosen to be equivalent;
 _i.e._, $\mathcal{Z} = \mathcal{X}$.
 The so-called Galerkin condition @eq-eigenvalue_galerkin is then equivalent to imposing that $\braket{\psi_i | H - \subspace{E} |\trial\psi} = 0$ holds for $i \in [1, \nbasis]$.
-This yields a system of $\nbasis$ equations with $\nbasis$ unknowns $\coeffs$ and, together with the normalization condition, reduces to Equation @eq-ritz_condition} obtained from the variational principle in Section @sec-eigen-emulators_variational.
+This yields a system of $\nbasis$ equations with $\nbasis$ unknowns $\coeffs$ and, together with the normalization condition, reduces to Equation @eq-ritz_condition obtained from the variational principle in Section @sec-eigen-emulators_variational.
 However, we stress that the test and trial function bases can be chosen differently (_i.e._, $\ket{\testfunc_i} \neq \ket{\psi_i}$), which makes the Galerkin method more general than the variational approach.
 Note that the normalization condition does not affect the Galerkin condition @eq-eigenvalue_galerkin and can be implemented by normalizing the trial function.
 
@@ -183,7 +183,7 @@ Note that the normalization condition does not affect the Galerkin condition @eq
 
 ## Emulator workflow and offline-online decomposition
 
-![Illustration of the workflow for implementing fast \& accurate emulators, including a high-fidelity solver (left) and an intrusive, projection-based emulator with efficient offline-online decomposition (right), for sampling the (approximate) solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem} in the parameter space $\params$.
+![Illustration of the workflow for implementing fast \& accurate emulators, including a high-fidelity solver (left) and an intrusive, projection-based emulator with efficient offline-online decomposition (right), for sampling the (approximate) solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem in the parameter space $\params$.
 For brevity, the figure assumes that the snapshots are orthonormalized during the offline stage such that $\mathcal{N} = \identity$ in the emulator equation @eq-ritz_condition.
 See the main text for details.](figs/emulator_construction.png){#fig-illustration_fom_rom}
 
@@ -200,7 +200,7 @@ Several computational frameworks exist in nuclear physics (and quantum chemistry
 For illustration, Figure @fig-illustration_fom_rom assumes that the high-fidelity solver performs a direct diagonalization of the $\nsimulator \times \nsimulator$ Hamiltonian in a chosen (truncated) model basis of length $\nsimulator$.
 The corresponding runtime $t_s$ per sampling point $\params_i$ is indicated by the width of the blue bar in Figure @fig-illustration_fom_rom.
 In nuclear physics, such approaches are referred to as Configuration Interaction (CI).
-However, the following discussion will be independent of how the high-fidelity solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem} are obtained in practice.
+However, the following discussion will be independent of how the high-fidelity solutions of the Schrödinger Equation @eq-generic_eigenvalue_problem are obtained in practice.
 
 Using the high-fidelity solver, one constructs a set of snapshots $\{\ket{\psi(\params_i)}\}_{i=1}^{\nbasis}$ in the truncated model basis to build the columns of the $\nsimulator \times \nbasis$ matrix $X$.
 The runtime for this task is $\nbasis \times t_s$.
@@ -223,7 +223,7 @@ $$
 $$ {#eq-H_affine}
 can be expressed as a sum of products of parameter-dependent functions $h_n(\params)$ and parameter-in\-de\-pendent operators $H_n$.
 Note that the functions $h_n(\params)$ are only required to be smooth but not necessarily linear in $\params$.
-The affine parameter dependence in Equation @eq-H_affine} then allows one to store the subspace-projected operators $\subspace{H}_n = X^\dagger H_n X$ separately up front in the offline phase, from which
+The affine parameter dependence in Equation @eq-H_affine then allows one to store the subspace-projected operators $\subspace{H}_n = X^\dagger H_n X$ separately up front in the offline phase, from which
 $$
 \begin{equation} \label{eq-Htilde_affine}
     \subspace{H}(\params) = \sum_n h_n(\params) \subspace{H}_n,
@@ -295,7 +295,7 @@ $$
 \end{align}
 $$ {#eq-anharm_osc}
 with $\sigma_n = [0.5, 2, 4] \; \mathrm{fm}$.
-The potential @eq-anharm_osc has the affine structure defined in Equation @eq-H_affine} and hence can be emulated rapidly after projecting into the snapshot basis during the offline stage.
+The potential @eq-anharm_osc has the affine structure defined in Equation @eq-H_affine for $\params$ and hence can be emulated rapidly after projecting into the snapshot basis during the offline stage.
 Even the high-fidelity system considered here is still small enough to be solved quickly and accurately using a fine radial mesh on a standard laptop.
 However, this provides an illuminating setting within which we can observe many qualities seen in more complicated scenarios.
 
@@ -442,7 +442,7 @@ These snapshots are then used to construct the reduced-order system as in Equati
 All of this, and more, is made simple by the **EigenEmulator** Python class provided in the supplemental material @companionwebsite.
 
 Once the reduced system has been constructed and the affine structure of the Hamiltonian exploited to store the projected matrices during the offline stage, we can begin rapid emulation during the online stage.
-To help provide a baseline to a common approach in nuclear physics, we provide an emulator constructed with the first $\nbasis$ HO wave functions as the trial basis $X$ in Equation @eq-ritz_condition.
+To help provide a baseline to a common approach in nuclear physics, we provide an emulator constructed with the first $\nbasis=6$ HO wave functions as the trial basis $X$ in Equation @eq-ritz_condition.
 We label this approach the HO emulator and the snapshot-based approach the reduced-basis method (RBM) emulator.
 One can emulate quantities with this HO approach via our **OscillatorEmulator** class @companionwebsite.
 
@@ -598,6 +598,7 @@ plt.show()
 
 Although both the reduced basis and HO basis are rich enough to capture the main effects of varying $\params$, the RBM emulator is much more effective at capturing the fine details of the wave function.
 This can be seen in more detail in Figure @fig-wave-function-residuals, where the absolute residuals of the RBM emulator are orders of magnitude smaller than those of the HO emulator.
+The sensitivity of the emulator accuracy as $\nbasis$ is varied can be readily studied using the Python code provided on the companion website @companionwebsite.
 
 The quality of the emulators can be understood by noting in Figure @fig-eigen-emulator-wavefunctions that the basis functions of the RBM emulator match much more closely with the emulated wave functions than the HO emulator, whose wave functions have nodes not seen in the ground state (see the gray lines).
 Thus, although the HO basis functions may be better at spanning the space of all possible wave functions, they are, in fact, a poor basis for spanning the set of all possible ground states as $\params$ are varied.
@@ -607,19 +608,20 @@ This can prove particularly effective for cases where the system's complexity li
 Next, we discuss the emulation of bound-state observables.
 Straightforward to emulate are the eigen-energies $E(\params)$, whose emulated values $\subspace{E}(\params)$ are the result of solving the emulator equation @eq-ritz_condition.
 But as discussed in Section @sec-eigen-emulators_variational, other observables associated with the operator $O$ can be emulated via $\braket{\psi(\params) | O | \psi(\params)} \approx \braket{\trial\psi(\params) | O | \trial\psi(\params)}$ using the $\trial\psi(\params)$ found from Equation @eq-ritz_condition.
-We choose to show the results of emulating the radius operator, defined here to be
+We choose to show the results of emulating the radius-squared operator $R^2$, defined here to be
 $$
 \begin{align}
-    \braket{\psi | R | \psi} = \int_0^\infty \dd{r} r\psi^2(r) .
+    \braket{\psi | R^2 | \psi} = \frac{1}{\mathcal{N}} \int_0^\infty r^2\dd{r} r^2\psi^2(r) ,
 \end{align}
 $$
+with the normalization $\mathcal{N} = \int_0^\infty r^2\dd{r} \psi^2(r)$.
 As stated previously, the bulk of the numerical effort in the evaluation of this matrix element is handled during the offline stage, where the integration is performed once,
 $$
 \begin{align}
-    \subspace{R}_{ij} \equiv \braket{\psi_i | R | \psi_j} = \int_0^\infty \dd{r} r\psi_i(r)\psi_j(r) ,
+    \subspace{R}_{ij}^2 \equiv \braket{\psi_i | R^2 | \psi_j} = \frac{1}{\mathcal{N}} \int_0^\infty r^2 \dd{r} r^2\psi_i(r)\psi_j(r)
 \end{align}
 $$
-and then the online stage emulation can occur quickly via Equation @eq-ec_expectation_emulator; _i.e._, $\braket{\psi(\params) | R | \psi(\params)} \approx \sum_{ij} \coeffsopt^{(i)}(\params)\subspace{R}_{ij} \coeffsopt^{(j)}(\params)$.
+and then the online stage emulation can occur quickly via Equation @eq-ec_expectation_emulator; _i.e._, $\braket{\psi(\params) | R^2 | \psi(\params)} \approx \sum_{ij} \coeffsopt^{(i)}(\params)\subspace{R}_{ij}^2 \coeffsopt^{(j)}(\params)$.
 
 For illustrative purposes, we continue our example using the trained RBM and HO emulators, but add a popular emulation tool to the discussion: Gaussian processes (GPs).
 GPs are non-parametric, non-intrusive machine learning models for both regression \& classification tasks [@rasmussen2006gaussian;@Mackay:1998introduction;@Mackay:2003information].
@@ -676,7 +678,7 @@ R_pred_gp, R_std_gp = gp_op.predict(p_valid, return_std=True)
 
 ```{python}
 #| label: fig-radius-residuals
-#| fig-cap: "Similar to Figure @fig-energy-residuals but for the radius."
+#| fig-cap: "Similar to Figure @fig-energy-residuals but for the root-mean-squared radius $\\sqrt{\\langle{R^2}\\rangle}$."
 #| echo: false
 fig, ax = plt.subplots(figsize=(3.4, 2))
 ax.semilogy(np.arange(len(R_full)), np.abs(R_pred_gp-R_full), label='GP', ls=':')
@@ -690,7 +692,7 @@ plt.show()
 
 The absolute residuals at the validation points for each of the RBM, HO, and GP emulators are shown in Figures @fig-energy-residuals and @fig-radius-residuals for the energy and radius, respectively.
 Among these emulators, the GP emulators perform the worst, despite being trained on the values of the energies and radii themselves to perform this very emulation task.
-Furthermore, its ability to extrapolate beyond the support of its training data is often poor unless great care is taken in the design of its kernel and mean function.
+Furthermore, its ability to extrapolate beyond the support of its training data is often poor unless great care is taken in the design of its kernel and mean function (see Figures 1 and 2 in Reference @Konig:2019adq).
 The GP suffers from what, in other contexts, could be considered its strength: because it treats the high-fidelity system as a black box (although some information can be conveyed via physics-informed priors for the hyperparameters), it cannot use the structure of the high-fidelity system to its advantage.
 Note that the point here is not that it is impossible to find some GP that can be competitive with other RBM emulators after using expert judgment and careful (_i.e._, physics-informed) hyperparameter tuning.
 Rather, we emphasize that with the reduced-order models, remarkably high accuracy is achieved _without_ the need for such expertise.
@@ -704,7 +706,7 @@ The RBM emulator combines the best ideas from the other emulators.
 Like the GP, the RBM emulator uses evaluations of the eigenvalue problem as training data.
 However, its "training data" are _curves_ (_i.e._, the wave functions) rather than scalars (_e.g._, eigen-energies), like the GP is trained upon.
 Like the HO emulator, the RBM emulator takes advantage of the structure of the system when projecting the high-fidelity system to create the reduced-order model.
-With these strengths, the RBM emulator is highly effective in emulating bound-state systems, even with only a few snapshots.
+With these strengths, the RBM emulator is highly effective in emulating bound-state systems, even with only a few snapshots and far from the support of the snapshots (see Figures1 and 2 in Reference @Konig:2019adq).
 As we will see in Section @sec-scattering-emulators, many of these strengths carry over to systems of differential equations.
 
 
