updates Summary & Outlook

--- a/docs/summary.qmd
+++ b/docs/summary.qmd
@@ -11,26 +11,35 @@ and applications central to the overall theme of this Frontiers Research Topic @
 
 In particular, we have discussed variational and Galerkin methods combined with snapshot-based trial (or test) functions as the foundation for constructing fast & accurate emulators.
 These emulators enable repeated bound state and scattering calculations, _e.g._, for  sampling a model's parameter space when high-fidelity calculations are computationally expensive or prohibitively slow.
-A crucial element in the emulator workflow, as summarized in Figure @fig-illustration_fom_rom, is an efficient offline-online decomposition in which the heavy computational lifting is performed only once before the emulator is invoked.
+A crucial element in this emulator workflow, as summarized in Figure @fig-illustration_fom_rom, is an efficient offline-online decomposition in which the heavy computational lifting is performed only once before the emulator is invoked.
 Chiral Hamiltonians allow for such efficient decompositions due to their affine parameter dependence on the low-energy couplings.
+Furthermore, we discussed the high efficacy of projection-based emulators in extrapolating results far from the support of the snapshot data, as opposed to the GPs.
+Both emulator types have a wide range of literature and software libraries available to be readily used in applications to nuclear physics.
 
-While MOR has already reached maturity in other fields, it is still in its infancy in nuclear physics---although rapidly growing---and there remains much to explore and exploit [@Melendez:2022; @Bonilla:2022rph; @Anderson:2022jhq; @Giuliani:2022yna].
+While MOR has already reached maturity in other fields, it is still in its infancy in nuclear physics---although rapidly growing---and there remains much to explore and exploit [@Melendez:2022kid; @Bonilla:2022rph; @Anderson:2022jhq; @Giuliani:2022yna].
 In the following, we highlight some of the many interesting research avenues for emulator applications in nuclear physics.
 All of these avenues can benefit from the rich MOR literature and software tools available (_e.g._, see References [@Benner_2017aa; @Benner2017modelRedApprox; @benner2015survey]):
 
 * Emulator uncertainties need to be robustly quantified and treated on equal footing with other uncertainties in nuclear physics calculations, such as EFT truncation errors.
     This will be facilitated by the extensive literature on the uncertainties in the RBM [@chen2017RBUQ; @Haasdonk2016RBM; @HUYNH2007473; @Rozza2008].
 
-* Speed-ups of competing emulators (_e.g._, the Newton vs Kohn variational principle) are typically highly implementation dependent.
+* The performance of competing emulators (_e.g._, the Newton vs Kohn variational principle) is typically highly implementation dependent.
     Best practices for efficient implementation of nuclear physics emulators should be developed.
-    MOR software libraries from other fields, such as **pyMOR** @milk2016pyMOR, should be exploited where possible.
+    This may include exploiting MOR software libraries from other fields, such as **pyMOR** @milk2016pyMOR, when possible.
 
 * Galerkin emulators are equivalent to variational emulators for bound-state and scattering calculations if the test and trial basis are properly chosen.
     But Galerkin (and especially Petrov-Galerkin) emulators are more general and exploring their applications
     in nonlinear problems
     may be fruitful in nuclear physics.
 
+* Emulator applied to non-linear problems will have challenges in terms of both speed and accuracy: 1) the basis size will, in general, need to be large(r) resulting in lower speed-up factors and longer offline stages; 2) using hyperreduction methods will lead to additional approximations that worsen the accuracy of the emulator and whose uncertainties need to be quantified.
+
 * Many technical aspects should be further explored, such as greedy (or active-learning) @Sarkar:2021fpz and SVD-based algorithms for choosing the training points more effectively, hyperreduction methods for non-affine problems, and improved convergence analyses.
+
+* Scattering emulators could play pivotal roles in connecting reaction models and experiments at new-generation rare-isotope facilities (_e.g._, the Facility for Rare-Isotope Beams).
+    In this regard, further studies on incorporating long-range Coulomb interactions and optical potentials beyond two-body systems will be valuable.
+    Furthermore, emulators for time-dependent density functional theories could see extensive applications in interpreting fission measurements.
+    At facilities such as Jefferson Lab and the future Electron-Ion Collider, explorations of nuclear dynamics at much higher energy scales should also benefit from emulators.
 
 * The emulator framework can be used to extrapolate observables far away from the support of the training data, such as the discrete energy levels of a many-body system calculated in one phase to those of another, as demonstrated in Reference @Frame:2017fah.
     Using emulators as a resummation tool to increase the convergence radius of series expansions @Demol:2019yjt falls into this category as well, and so does using them to extrapolate finite-box simulations of quantum systems across wide ranges of box sizes @Yapa:2022nnv.
